# BananaSharePoint-USI

./: .gitignore  LICENSE  README.md
FileSend/: CMakeLists.txt  GoogleAPIIntegration.cpp  GoogleAPIIntegration.h  GoogleOAuth2.cpp  GoogleOAuth2.h  GoogleOAuth2Test.cpp  MicrosoftOAuth2.cpp  MicrosoftOAuth2.h  MicrosoftOAuth2Test.cpp  OAuth2Base.h  googleapiwrapper.cpp  googleapiwrapper.h  main.cpp  main.h
Running_FileSend/: Google_secrets.h  Microsoft_secrets.h
TextEditor/: CMakeLists.txt  CMakePresets.json  CMakePresets_user-example.json  MicrosoftOAuth2.cpp  MicrosoftOAuth2.h  OAuth2Base.h  TextEditor.qm  TextEditor.ts  Texteditor.iss  Texteditor.iss.in  _clang-format  abstractauthenticator.cpp  abstractauthenticator.h  authenticator.cpp  authenticator.h  authenticatorMicrosoft.cpp  authenticatorMicrosoft.h  authenticatorgoogle.cpp  authenticatorgoogle.h  google_secrets.h  helperstructures.h  launch.vs.json.in  main.cpp  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h  microsoft_secrets.h  params.json  params_google.json  secrets.h
TextEditor/installer/: CMakeLists.txt
TextEditor/installer/windows/: installerBanana.iss.in  windeploy.cmake.in
